# workshop-02-dataquality

./: 404.html  README.md  index.html  inferred_schema.py  inferred_schema_crm.json  my_duckdb.db  pyproject.toml  schema_crm.py
app/: etl.py  funcao.py  ler_duckdb.py  schema.py
docs/: index.md
exemplo/: exemplo00.py  exemplo02.py
search/: search_index.json
sql/: create_database.sql  create_table_produtos_bronze.sql  insert_into_tabela_bronze.sql  insert_into_tabela_bronze_email.sql  insert_wrong_values_into_tabela_bronze.sql
tests/: test_func_etl.py  test_funcao_ola.py
