[tool.poetry]
name = "workshop-02-dataquality"
version = "0.1.0"
description = ""
authors = ["Felipe Sebben <felipesebben@yahoo.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.5.3"
mkdocs-mermaid2-plugin = "^1.1.1"
mkdocs-material = {extras = ["python"], version = "^9.5.13"}
mkdocstrings = {extras = ["crystal", "python"], version = "^0.24.1"}
taskipy = "^1.12.2"
isort = "^5.13.2"
black = "^24.2.0"
pytest = "^8.0.2"
pydantic = "^2.6.3"
pandera = {extras = ["io"], version = "^0.18.0"}
pandas = "^2.2.1"
sqlalchemy = "^2.0.28"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
duckdb = "^0.10.0"
multimethod = "^1.11.2"


[tool.pytest.ini_options]
filterwarnings = [
    "ignore:base implementation will eventually ignore annotations as `singledispatch does`:DeprecationWarning",
    "ignore:use `parametric\\(<base>, <func>\\)` as a type instead:DeprecationWarning"
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = "isort . && black ."
kill = "kill -9 $(lsof -t -i :8000)"
test = "pytest -v"
run = """
python3 app/main.py
"""
doc = "mkdocs serve"